--- a/appdir/templates/manage_recipes.html
+++ b/appdir/templates/manage_recipes.html
@@ -3,15 +3,23 @@
 
     <h2 class="page-title theme-color center">Manage Recipes</h2>
 
-    <ul class="pagination center main-text">
-        {% for letter in a_z %}
-            <li class=
-            "{% if letter_filter == letter %}
-                active
-            {% endif %}">
-            <a href="{{ url_for('get_recipes_filter', filter=letter) }}"><strong>{{ letter }}</strong></a></li>
-        {% endfor %}
-    </ul>
+    <!-- search bar -->
+    <div id="search-bar" class="row card-panel grey lighten-3">
+        <form action="{{ url_for('manage_recipes', query=query) }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m9">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search Recipes</label>
+                </div>
+                <div class="col s12 m3">
+                    <button type="submit" class="red darken-4 btn text-shadow">
+                        <i class="fas fa-search left"></i> Search
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
 
     <div class="row center-align">
         {% if recipes|length > 0 %}
@@ -108,7 +116,8 @@
                 </div>
             {% endfor %}
         {% else %}
-            <h3 class="theme-color center">No results found</h2>
+            <h3 class="theme-color center">No results found</h3>
+            <a class="theme-color text-link center" href="{{ url_for('manage_recipes') }}">Click to Return to Managing All Recipes</a>
         {% endif %}
     </div>
 
