--- a/appdir/templates/add_recipe.html
+++ b/appdir/templates/add_recipe.html
@@ -30,16 +30,16 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ul prefix red-text text-darken-2"></i>
-                    <textarea id="ingredients" name="ingredients" class="materialize-textarea validate" placeholder="Enter each ingredient & quantity on a new line." required></textarea>
-                    <label for="ingredients">Ingredients</label>
+                    <textarea id="ingredients" name="ingredients" class="materialize-textarea responsive-label validate" required></textarea>
+                    <label for="ingredients">Ingredients (Enter each ingredient & quantity on a new line)</label>
                 </div>
             </div>
             <!-- instructions -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ol prefix red-text text-darken-2"></i>
-                    <textarea id="instructions" name="instructions" class="materialize-textarea validate" placeholder="Enter each instruction in order and on a new line." required></textarea>                    
-                    <label for="instructions">Recipe Instructions</label>
+                    <textarea id="instructions" name="instructions" class="materialize-textarea responsive-label validate" required></textarea>                    
+                    <label for="instructions">Recipe Instructions (Enter each instruction in order and on a new line)</label>
                 </div>
             </div>
             <!-- image url -->
