--- a/appdir/templates/login.html
+++ b/appdir/templates/login.html
@@ -7,7 +7,7 @@
             below.</p>
         <p class="col s12 m8 offset-m2 theme-color center main-text">
             Not Yet Registered?
-            <a href="{{ url_for('register') }}" class="main-text light-blue-text">Register Here</a>
+            <a href="{{ url_for('register') }}" class="main-text dark-blue-text">Register Here</a>
         </p>
     </div>
 
