--- a/appdir/templates/add_category.html
+++ b/appdir/templates/add_category.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-image prefix red-text text-darken-2"></i>
-                    <input id="category_img" name="category_img" minlength="3" maxlength="25" type="text" class="validate"
+                    <input id="category_img" name="category_img" minlength="3" maxlength="25" type="text" class="validate responsive-label"
                         required>
                     <label for="category_img">Category Image Name (including file extension such as .jpg/.png, etc.)</label>
                 </div>
