--- a/appdir/templates/edit_recipe.html
+++ b/appdir/templates/edit_recipe.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ul prefix red-text text-darken-2"></i>
-                    <textarea id="ingredients" name="ingredients" class="materialize-textarea validate" placeholder="Enter each ingredient & quantity on a new line." 
+                    <textarea id="ingredients" name="ingredients" class="materialize-textarea responsive-label validate" placeholder="Enter each ingredient & quantity on a new line." 
                         required>
                         {%- for ingredient in mongo_recipe.ingredients -%}
                             {%- if ingredient != mongo_recipe.ingredients[-1] -%}
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ol prefix red-text text-darken-2"></i>
-                    <textarea id="instructions" name="instructions" class="materialize-textarea validate" placeholder="Enter each instruction in order and on a new line." 
+                    <textarea id="instructions" name="instructions" class="materialize-textarea responsive-label validate" placeholder="Enter each instruction in order and on a new line." 
                         required>
                         {%- for instruction in mongo_recipe.instructions -%}
                             {%- if instruction != mongo_recipe.instructions[-1] -%}
