--- a/appdir/templates/manage_recipes.html
+++ b/appdir/templates/manage_recipes.html
@@ -7,12 +7,12 @@
     <div id="search-bar" class="row card-panel grey lighten-3">
         <form action="{{ url_for('manage_recipes', query=query) }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m9">
+                <div class="input-field col s12 m9 l10">
                     <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query">Search Recipes</label>
                 </div>
-                <div class="col s12 m3">
+                <div class="col s12 m3 l2">
                     <button type="submit" class="red darken-4 btn text-shadow">
                         <i class="fas fa-search left"></i> Search
                     </button>
@@ -25,7 +25,7 @@
         {% if recipes|length > 0 %}
             {% for recipe in recipes %}
                 <div class="col s12 m4 l3">
-                    <div class="card red accent-5 text-shadow center-align">
+                    <div class="card red-subtheme text-shadow center-align">
                         <div class="card-image" style="background-image: url(
                             {% if recipe.img_url != '' %}
                                 {{ recipe.img_url }}
