--- a/appdir/templates/profile.html
+++ b/appdir/templates/profile.html
@@ -5,35 +5,35 @@
 
     <div class="row">
         <div class="col s12 m6 l4">
-            <div class="card red darken-1">
-                <div class="card-content white-text">
+            <div class="card red-subtheme">
+                <div class="card-content white-text content-wrapper">
                     <span class="card-title center">My Recipes</span>
                     <p class="center">View and manage recipes you've added to the website.</p>
                 </div>
                 <div class="card-action center">
-                    <a href="{{ url_for('my_recipes') }}">Go to My Recipes</a>
+                    <a href="{{ url_for('my_recipes') }}" class="btn card-btn">Go to My Recipes</a>
                 </div>
             </div>
         </div>
         <div class="col s12 m6 l4">
-            <div class="card red darken-1">
-                <div class="card-content white-text">
+            <div class="card red-subtheme">
+                <div class="card-content white-text content-wrapper">
                     <span class="card-title center">Add Recipe</span>
                     <p class="center">Add a new recipe to the website.</p>
                 </div>
                 <div class="card-action center">
-                    <a href="{{ url_for('add_recipe') }}">Add Recipe</a>
+                    <a href="{{ url_for('add_recipe') }}" class="btn card-btn">Add Recipe</a>
                 </div>
             </div>
         </div>
         <div class="col s12 m6 l4">
-            <div class="card red darken-1">
-                <div class="card-content white-text">
+            <div class="card red-subtheme">
+                <div class="card-content white-text content-wrapper">
                     <span class="card-title center">Log Out</span>
                     <p class="center">Log out of the website.</p>
                 </div>
                 <div class="card-action center">
-                    <a href="{{ url_for('logout') }}">Log Out</a>
+                    <a href="{{ url_for('logout') }}" class="btn card-btn">Log Out</a>
                 </div>
             </div>
         </div>
@@ -44,35 +44,35 @@
 
         <div class="row">
             <div class="col s12 m6 l4">
-                <div class="card red darken-1">
-                    <div class="card-content white-text">
+                <div class="card red-subtheme">
+                    <div class="card-content white-text content-wrapper">
                         <span class="card-title center">Manage Recipes</span>
                         <p class="center">Manage the website's recipes.</p>
                     </div>
                     <div class="card-action center">
-                        <a href="{{ url_for('manage_recipes') }}">Go to All Recipes</a>
+                        <a href="{{ url_for('manage_recipes') }}" class="btn card-btn">Go to All Recipes</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m6 l4">
-                <div class="card red darken-1">
-                    <div class="card-content white-text">
+                <div class="card red-subtheme">
+                    <div class="card-content white-text content-wrapper">
                         <span class="card-title center">Manage Categories</span>
                         <p class="center">Manage the website's recipe categories.</p>
                     </div>
                     <div class="card-action center">
-                        <a href="{{ url_for('manage_categories') }}">Go to All Categories</a>
+                        <a href="{{ url_for('manage_categories') }}" class="btn card-btn">Go to All Categories</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m6 l4">
-                <div class="card red darken-1">
-                    <div class="card-content white-text">
+                <div class="card red-subtheme">
+                    <div class="card-content white-text content-wrapper">
                         <span class="card-title center">Manage Users</span>
                         <p class="center">Manage the website's registered users.</p>
                     </div>
                     <div class="card-action center">
-                        <a href="{{ url_for('get_users') }}">Manage Users</a>
+                        <a href="{{ url_for('get_users') }}" class="btn card-btn">Manage Users</a>
                     </div>
                 </div>
             </div>
