--- a/appdir/templates/recipes.html
+++ b/appdir/templates/recipes.html
@@ -7,12 +7,12 @@
     <div id="search-bar" class="row card-panel grey lighten-3">
         <form action="{{ url_for('get_recipes', query=query) }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m9">
+                <div class="input-field col s12 m9 l10">
                     <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query">Search Recipes</label>
                 </div>
-                <div class="col s12 m3">
+                <div class="col s12 m3 l2">
                     <button type="submit" class="red darken-4 btn text-shadow">
                         <i class="fas fa-search left"></i> Search
                     </button>
@@ -37,7 +37,7 @@
         {% if recipes|length > 0 %}
             {% for recipe in recipes %}
                 <div class="col s12 m6 l3">
-                    <div class="card red accent-5 text-shadow center-align">
+                    <div class="card red-subtheme text-shadow center-align">
                         <div class="card-image" style="background-image: url(
                             {% if recipe.img_url != '' %}
                                 {{ recipe.img_url }}
@@ -46,7 +46,7 @@
                             {% endif %}
                             );">
                         </div>
-                        <div class="card-content white-text">
+                        <div class="card-content white-text content-wrapper">
                             <!-- Modal Trigger -->
                             <a href="#recipe-modal-{{ recipe.id }}" class="card-title modal-trigger text-link">{{ recipe.recipe_name }}</a>
                             <p>Category: {{ recipe.category }}</p>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="card-action">
                             <!-- Additional Modal Trigger -->
-                            <a href="#recipe-modal-{{ recipe.id }}" class="btn red darken-4 modal-trigger">View Details</a>
+                            <a href="#recipe-modal-{{ recipe.id }}" class="btn card-btn modal-trigger">View Details</a>
                         </div>
                     </div>
                 </div>
