--- a/appdir/templates/register.html
+++ b/appdir/templates/register.html
@@ -7,7 +7,7 @@
             below.</p>
         <p class="col s12 m8 offset-m2 theme-color center main-text">
             Already Registered?
-            <a href="{{ url_for('login') }}" class="main-text light-blue-text">Log In Here</a>
+            <a href="{{ url_for('login') }}" class="main-text dark-blue-text">Log In Here</a>
         </p>
     </div>
 
