Add README content and validate all code - small changes made to code to ensure validation. Additional comments added to HTML templates.

--- a/appdir/templates/add_recipe.html
+++ b/appdir/templates/add_recipe.html
@@ -61,10 +61,9 @@
         </form>
         <div class="row">
             <div class="col s12 center-align button-div">
-                <a class="btn-cancel">
-                    <button class=" btn-large red darken-4 text-shadow">
+                    <button class="btn-cancel btn-large red darken-4 text-shadow">
                         Cancel
-                    </button></a>
+                    </button>
             </div>
         </div>
     </div>
