--- a/appdir/templates/add_category.html
+++ b/appdir/templates/add_category.html
@@ -40,10 +40,9 @@
         </form>
         <div class="row">
             <div class="col s12 center-align button-div">
-                <a class="btn-cancel">
-                    <button class=" btn-large red darken-4 text-shadow">
-                        Cancel
-                    </button></a>
+                <button class="btn-cancel btn-large red darken-4 text-shadow">
+                    Cancel
+                </button>
             </div>
         </div>
     </div>
