--- a/appdir/templates/categories.html
+++ b/appdir/templates/categories.html
@@ -4,6 +4,7 @@
     <h2 class="page-title theme-color center">Categories</h2>
 
     <div class="row">
+        <!-- category cards -->
         {% if categories|length > 0 %}
             {% for category in categories %}
                 <div class="col s12 m4 l3">
