--- a/appdir/templates/category.html
+++ b/appdir/templates/category.html
@@ -4,6 +4,7 @@
     <h2 class="page-title theme-color center">{{ category.category_name }} Recipes</h2>
 
     <div class="row center-align">
+        <!-- recipe cards -->
         {% if recipes|length > 0 %}
             {% for recipe in recipes %}
                 <div class="col s12 m6 l3">
@@ -37,9 +38,12 @@
                 <div id="recipe-modal-{{ recipe.id }}" class="modal recipe-modal">
                     <div class="modal-content red accent-4 white-text">
                         <i class="fa-solid fa-circle-xmark modal-exit modal-close"></i>
+                        <!-- recipe name -->
                         <h3 class="modal-recipe-title">{{ recipe.recipe_name }}</h3>
+                        <!-- recipe category -->
                         <h4>Category: {{ recipe.category }}</h4>
                         <div class="row">
+                            <!-- ingredients -->
                             <div class="col s12 m6 ingredients-content">
                                 <h5>Ingredients</h5>
                                 <ul>
@@ -52,6 +56,7 @@
                                     {% endfor %}
                                 </ul>
                             </div>
+                            <!-- instructions -->
                             <div class="col s12 m6">
                                 <h5>Instructions</h5>
                                 <ol>
@@ -65,6 +70,7 @@
                                 </ol>
                             </div>
                         </div>
+                        <!-- owner -->
                         <h4>Owner: 
                             {% for mongo_recipe in mongo_recipes %}
                                 {% if mongo_recipe.id == recipe.id %}
@@ -73,6 +79,7 @@
                             {% endfor %}
                         </h4>
                     </div>
+                    <!-- modal footer -->
                     <div class="modal-footer">
                         <div class="col s12 center">
                             <button class="modal-action modal-close btn green darken-4 white-text">Close</button>
