--- a/appdir/templates/edit_category.html
+++ b/appdir/templates/edit_category.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="page-title theme-color center">Add Category</h2>
+    <h2 class="page-title theme-color center">Edit {{ category.category_name }} Category</h2>
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category.id) }}">
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col s12 center-align button-div">
                     <button type="submit" class="btn-large green darken-4 text-shadow">
-                        Update Category <i class="fas fa-plus-square right"></i>
+                        Update Category <i class="fa-solid fa-pen-to-square right"></i>
                     </button>
                 </div>
             </div>
@@ -41,10 +41,9 @@
         <div class="row">
             <!-- cancel button -->
             <div class="col s12 center-align button-div">
-                <a class="btn-cancel">
-                    <button class=" btn-large red darken-4 text-shadow">
-                        Cancel <i class="fas fa-plus-square right"></i>
-                    </button></a>
+                <button class="btn-cancel btn-large red darken-4 text-shadow">
+                    Cancel
+                </button>
             </div>
         </div>
     </div>
