--- a/appdir/templates/edit_recipe.html
+++ b/appdir/templates/edit_recipe.html
@@ -20,7 +20,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-folder-open prefix red-text text-darken-2"></i>
                     <select id="category_id" name="category_id" class="validate" required>
-                        <option value="" disabled selected>Choose Category</option>
+                        <option value="" disabled>Choose Category</option>
                         {% for category in categories %}
                             {% if category.id == recipe.category_id | int %}
                                 <option value="{{ category.id }}" selected>{{ category.category_name }}</option>
@@ -77,17 +77,17 @@
             <div class="row">
                 <div class="col s12 center-align button-div">
                     <button type="submit" class="btn-large green darken-4 text-shadow">
-                        Update Recipe <i class="fas fa-plus-square right"></i>
+                        Update Recipe <i class="fa-solid fa-pen-to-square right"></i>
                     </button>
                 </div>
             </div>
         </form>
+        <!-- cancel button -->
         <div class="row">
             <div class="col s12 center-align button-div">
-                <a class="btn-cancel">
-                    <button class=" btn-large red darken-4 text-shadow">
-                        Cancel
-                    </button></a>
+                <button class="btn-cancel btn-large red darken-4 text-shadow">
+                    Cancel
+                </button>
             </div>
         </div>
     </div>
