--- a/appdir/templates/edit_user.html
+++ b/appdir/templates/edit_user.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col s12 center-align button-div">
                     <button type="submit" class="btn-large green darken-4 text-shadow">
-                        Update User <i class="fas fa-plus-square right"></i>
+                        Update User <i class="fa-solid fa-pen-to-square right"></i>
                     </button>
                 </div>
             </div>
@@ -51,10 +51,9 @@
         <div class="row">
             <!-- cancel button -->
             <div class="col s12 center-align button-div">
-                <a class="btn-cancel">
-                    <button class=" btn-large red darken-4 text-shadow">
-                        Cancel <i class="fas fa-plus-square right"></i>
-                    </button></a>
+                <button class="btn-cancel btn-large red darken-4 text-shadow">
+                    Cancel
+                </button>
             </div>
         </div>
     </div>
