--- a/appdir/templates/manage_recipes.html
+++ b/appdir/templates/manage_recipes.html
@@ -21,11 +21,13 @@
         </form>
     </div>
 
+    <!-- recipe cards -->
     <div class="row center-align">
         {% if recipes|length > 0 %}
             {% for recipe in recipes %}
                 <div class="col s12 m4 l3">
                     <div class="card red-subtheme text-shadow center-align">
+                        <!-- recipe image -->
                         <div class="card-image" style="background-image: url(
                             {% if recipe.img_url != '' %}
                                 {{ recipe.img_url }}
@@ -35,30 +37,34 @@
                             );">
                         </div>
                         <div class="card-content white-text">
+                            <!-- recipe name and modal link -->
                             <a data-target="modal-view-{{ recipe.id }}" class="card-title text-link modal-trigger">{{ recipe.recipe_name }}</a>
+                            <!-- recipe category -->
                             <p>
                                 Category: 
-                                {% for category in categories %}
+                                {%- for category in categories -%}
                                     {% if category.id == recipe.category_id %}
-                                        {{ category.category_name }}
+                                        {{ category.category_name -}}
                                     {% endif %}
-                                {% endfor %}
+                                {%- endfor -%}
                             </p>
+                            <!-- recipe owner -->
                             <p>
                                 Owner: 
-                                {% for mongo_recipe in mongo_recipes %}
+                                {%- for mongo_recipe in mongo_recipes -%}
                                     {% if recipe.id == mongo_recipe["id"] %}
-                                        {{ mongo_recipe["created_by"] }}
+                                        {{ mongo_recipe["created_by"] -}}
                                     {% endif %}
-                                {% endfor %}
+                                {%- endfor -%}
                             </p>
                         </div>
                         <div class="card-action">
+                            <!-- edit recipe button -->
                             <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green darken-4">Edit</a>
-                            <!-- Modal Trigger -->
+                            <!-- delete recipe modal trigger -->
                             <a data-target="modal-delete-{{ recipe.id }}" class="btn red darken-4 modal-trigger">Delete</a>
                         </div>
-                        <!-- Modal Structure -->
+                        <!-- delete recipe modal structure -->
                         <div id="modal-delete-{{ recipe.id }}" class="modal">
                             <div class="modal-content red accent-4 white-text">
                                 <h3>Warning!</h3>
@@ -66,20 +72,26 @@
                                 <p>Are you sure you want to permanently delete the <strong>{{ recipe.recipe_name }}</strong> recipe?</p>
                             </div>
                             <div class="modal-footer">
+                                <!-- delete recipe button -->
                                 <div class="col s6 center">
                                     <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="modal-action btn red darken-4 white-text">DELETE RECIPE</a>
                                 </div>
+                                <!-- cancel button -->
                                 <div class="col s6 center">
                                     <a class="modal-action modal-close btn green darken-4 white-text">CANCEL</a>
                                 </div>
                             </div>
                         </div>
+                        <!-- recipe information modal -->
                         <div id="modal-view-{{ recipe.id }}" class="modal recipe-modal">
                             <div class="modal-content red accent-4 white-text">
                                 <i class="fa-solid fa-circle-xmark modal-exit modal-close"></i>
+                                <!-- recipe name -->
                                 <h3 class="modal-recipe-title">{{ recipe.recipe_name }}</h3>
+                                <!-- recipe category -->
                                 <h4>Category: {{ recipe.category }}</h4>
                                 <div class="row">
+                                    <!-- recipe ingredients -->
                                     <div class="col s12 m6 ingredients-content">
                                         <h5>Ingredients</h5>
                                         <ul>
@@ -92,6 +104,7 @@
                                             {% endfor %}
                                         </ul>
                                     </div>
+                                    <!-- recipe instructions -->
                                     <div class="col s12 m6">
                                         <h5>Instructions</h5>
                                         <ol>
@@ -107,6 +120,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
+                                <!-- close modal button -->
                                 <div class="col s12 center">
                                     <button class="modal-action modal-close btn green darken-4 white-text">Close</button>
                                 </div>
