--- a/appdir/templates/my_recipes.html
+++ b/appdir/templates/my_recipes.html
@@ -4,6 +4,7 @@
     <h2 class="page-title theme-color center">My Recipes</h2>
 
     <div class="row">
+        <!-- add recipe button -->
         <div class="col s12 center-align">
             <a href="{{ url_for('add_recipe') }}" class="btn-large red accent-4 text-shadow">
                 Add Recipe <i class="fas fa-plus-square right"></i>
@@ -12,10 +13,12 @@
     </div>
 
     <div class="row center-align">
+        <!-- recipe cards -->
         {% if user_recipes|length > 0 %}
             {% for recipe in user_recipes %}
                 <div class="col s12 m4 l3">
                     <div class="card red-subtheme text-shadow center-align">
+                        <!-- recipe image -->
                         <div class="card-image" style="background-image: url(
                             {% if recipe.img_url != '' %}
                                 {{ recipe.img_url }}
@@ -25,8 +28,9 @@
                             );">
                         </div>
                         <div class="card-content white-text content-wrapper">
-                            <!-- Recipe Modal Trigger -->
+                            <!-- recipe name and recipe modal trigger -->
                             <a data-target="recipe-modal-{{ recipe.id }}" class="btn card-title text-link modal-trigger">{{ recipe.recipe_name }}</a>
+                            <!-- recipe category -->
                             <p>
                                 Category: 
                                 {% for category in categories %}
@@ -37,11 +41,12 @@
                             </p>
                         </div>
                         <div class="card-action">
+                            <!-- edit recipe button -->
                             <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green darken-4">Edit</a>
-                            <!-- Delete Modal Trigger -->
+                            <!-- delete modal trigger -->
                             <a data-target="modal-delete-{{ recipe.id }}" class="btn red darken-4 modal-trigger">Delete</a>
                         </div>
-                        <!-- Delete Modal Structure -->
+                        <!-- delete modal structure -->
                         <div id="modal-delete-{{ recipe.id }}" class="modal">
                             <div class="modal-content red accent-4 white-text">
                                 <h3>Warning!</h3>
@@ -49,9 +54,11 @@
                                 <p>Are you sure you want to permanently delete the <strong>{{ recipe.recipe_name }}</strong> recipe?</p>
                             </div>
                             <div class="modal-footer">
+                                <!-- delete recipe button -->
                                 <div class="col s6 center">
                                     <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="modal-action btn red darken-4 white-text">DELETE RECIPE</a>
                                 </div>
+                                <!-- cancel button -->
                                 <div class="col s6 center">
                                     <a class="modal-action modal-close btn green darken-4 white-text">CANCEL</a>
                                 </div>
@@ -60,8 +67,10 @@
                         <!-- Recipe Modal Structure -->
                         <div id="recipe-modal-{{ recipe.id }}" class="modal recipe-modal">
                             <div class="modal-content red accent-4 white-text">
+                                <!-- recipe name -->
                                 <h4 class="modal-recipe-title">{{ recipe.recipe_name }}</h4>
                                 <div class="row">
+                                    <!-- recipe ingredients -->
                                     <div class="col s12 m6 ingredients-content">
                                         <h5>Ingredients</h5>
                                         <ul>
@@ -74,6 +83,7 @@
                                             {% endfor %}
                                         </ul>
                                     </div>
+                                    <!-- recipe instructions -->
                                     <div class="col s12 m6">
                                         <h5>Instructions</h5>
                                         <ol>
@@ -89,6 +99,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
+                                <!-- close modal button -->
                                 <div class="col s12 center">
                                     <button class="modal-action modal-close btn green darken-4 white-text">Close</button>
                                 </div>
