--- a/appdir/templates/profile.html
+++ b/appdir/templates/profile.html
@@ -4,6 +4,7 @@
     <h2 class="page-title theme-color center">{{ username }}'s Profile Options</h2>
 
     <div class="row">
+        <!-- my recipes -->
         <div class="col s12 m6 l4">
             <div class="card red-subtheme">
                 <div class="card-content white-text content-wrapper">
@@ -15,6 +16,7 @@
                 </div>
             </div>
         </div>
+        <!-- add recipe -->
         <div class="col s12 m6 l4">
             <div class="card red-subtheme">
                 <div class="card-content white-text content-wrapper">
@@ -26,6 +28,7 @@
                 </div>
             </div>
         </div>
+        <!-- log out -->
         <div class="col s12 m6 l4">
             <div class="card red-subtheme">
                 <div class="card-content white-text content-wrapper">
@@ -39,10 +42,12 @@
         </div>
     </div>
 
+    <!-- superuser options -->
     {% if is_superuser %}
         <h2 class="page-title theme-color center">{{ username }}'s Superuser Options</h2>
 
         <div class="row">
+            <!-- manage recipes -->
             <div class="col s12 m6 l4">
                 <div class="card red-subtheme">
                     <div class="card-content white-text content-wrapper">
@@ -54,6 +59,7 @@
                     </div>
                 </div>
             </div>
+            <!-- manage categories -->
             <div class="col s12 m6 l4">
                 <div class="card red-subtheme">
                     <div class="card-content white-text content-wrapper">
@@ -65,6 +71,7 @@
                     </div>
                 </div>
             </div>
+            <!-- manage users -->
             <div class="col s12 m6 l4">
                 <div class="card red-subtheme">
                     <div class="card-content white-text content-wrapper">
