Update README; add functionality for confirmation dialog when exiting certain pages where information is inputted by the user.

--- a/appdir/templates/add_recipe.html
+++ b/appdir/templates/add_recipe.html
@@ -3,7 +3,7 @@
 
     <h2 class="page-title theme-color center">Add Recipe</h2>
 
-    <div id="page-content" class="row card-panel grey lighten-5">
+    <div id="page-content" class="row">
         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
             <!-- recipe name -->
             <div class="row">
