--- a/appdir/templates/add_category.html
+++ b/appdir/templates/add_category.html
@@ -3,7 +3,7 @@
 
     <h2 class="page-title theme-color center">Add Category</h2>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row">
         <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
             <!-- category name -->
             <div class="row">
