--- a/appdir/templates/edit_category.html
+++ b/appdir/templates/edit_category.html
@@ -3,7 +3,7 @@
 
     <h2 class="page-title theme-color center">Edit {{ category.category_name }} Category</h2>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category.id) }}">
             <!-- category name -->
             <div class="row">
