--- a/appdir/templates/edit_recipe.html
+++ b/appdir/templates/edit_recipe.html
@@ -3,7 +3,7 @@
 
     <h2 class="page-title theme-color center">Edit Recipe: {{ recipe.recipe_name }}</h2>
 
-    <div id="page-content" class="row card-panel grey lighten-5">
+    <div id="page-content" class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('edit_recipe', categories=categories, recipe_id=recipe.id,
         mongo_recipe=mongo_recipe) }}">
             <!-- recipe name -->
