--- a/appdir/templates/edit_user.html
+++ b/appdir/templates/edit_user.html
@@ -3,7 +3,7 @@
 
     <h2 class="page-title theme-color center">Edit User</h2>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel">
         <form class="col s12" method="POST" action="{{ url_for('edit_user', user_id=user.id) }}">
             <!-- username -->
             <div class="row">
